Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,37 @@
     ]
   },
   {
+    "title": "Ra mắt sách những lần tách nhập đơn vị hành chính",
+    "content": "Bộ sách \"Thành lập và thay đổi địa danh, địa giới đơn vị hành chính trong lịch sử Việt Nam\" của nhà nghiên cứu Nguyễn Quang Ân vừa được ra mắt, ghi chép chi tiết về những lần tách nhập đơn vị hành chính từ thời Hùng Vương đến nay. Bộ sách gần 2.000 trang gồm hai tập, tổng hợp từ hàng nghìn tài liệu và văn bản pháp lý liên quan đến các khu vực hành chính của Việt Nam. Qua tác phẩm, tác giả cung cấp cái nhìn sâu sắc về sự thay đổi địa danh và địa giới qua các thời kỳ lịch sử, đáp ứng nhu cầu nghiên cứu và tra cứu trong lĩnh vực này.",
+    "link": "https://vnexpress.net/ra-mat-sach-nhung-lan-tach-nhap-don-vi-hanh-chinh-4864831.html",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Bộ sách nào vừa được ra mắt ghi chép về sự thay đổi đơn vị hành chính ở Việt Nam?",
+    "answers": [
+      {
+        "text": "Thành lập và thay đổi địa danh, địa giới đơn vị hành chính trong lịch sử Việt Nam",
+        "correct": true
+      },
+      {
+        "text": "Lịch sử Việt Nam qua các thời kỳ",
+        "correct": false
+      },
+      {
+        "text": "Những danh nhân Việt Nam",
+        "correct": false
+      },
+      {
+        "text": "Địa lý hành chính Việt Nam",
+        "correct": false
+      },
+      {
+        "text": "Tìm hiểu về văn hóa Việt Nam",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chả lá lốt kiểu Hải Phòng",
     "content": "Chả lá lốt kiểu Hải Phòng là món ăn đặc trưng với lớp vỏ bên ngoài hơi xém và màu xanh đẹp mắt, nhân bên trong gồm thịt xay mềm, ngọt và mộc nhĩ sần sật. Để làm món ăn này, cần chuẩn bị nguyên liệu như thịt vai, lá lốt, mộc nhĩ và gia vị. Sau khi trộn đều và gói lại, chả được chiên hoặc hấp sơ để giữ được độ mềm và hương vị thơm ngon. Món ăn thường được ăn kèm với rau muống luộc và nước mắm chấm tỏi ớt, rất được yêu thích tại Hải Phòng.",
     "link": "https://vnexpress.net/cha-la-lot-kieu-hai-phong-4864805.html",
@@ -857,6 +888,33 @@
     ]
   },
   {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -883,33 +941,6 @@
       },
       {
         "text": "Ung thư đại tràng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -2314,33 +2345,6 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
-    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
-    "answers": [
-      {
-        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
-        "correct": false
-      },
-      {
-        "text": "Không có lợi ích gì cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Làm tăng cảm giác đói nhanh hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tranh cãi gay gắt những khóa học dạy làm cha mẹ tốt",
     "content": "Tại Trung Quốc, các khóa học dạy làm cha mẹ đang gây tranh cãi với những khẩu hiệu như \"Cha mẹ sửa mình, không phải sửa con\". Những khóa học này thu hút nhiều phụ huynh đang gặp khó khăn trong việc nuôi dạy con cái. Tuy nhiên, hiệu quả của các khóa học này vẫn là đề tài gây tranh cãi, khi nhiều phụ huynh vẫn chưa thấy được cải thiện trong mối quan hệ với con hoặc tình trạng của con cái. Thêm vào đó, công ty cung cấp khóa học cũng đã bị phạt vì vi phạm quảng cáo.",
     "link": "https://dantri.com.vn/giao-duc/tranh-cai-gay-gat-nhung-khoa-hoc-day-lam-cha-me-tot-20250322150409471.htm",
@@ -2398,6 +2402,33 @@
       },
       {
         "text": "Do trẻ không ăn uống đầy đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
+    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
+    "answers": [
+      {
+        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích gì cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Làm tăng cảm giác đói nhanh hơn.",
         "correct": false
       }
     ]
@@ -2662,33 +2693,6 @@
     ]
   },
   {
-    "title": "Chiến sự Ukraine 23/3: Kiev \"tất tay\", dốc toàn lực tấn công Belgorod",
-    "content": "Vào ngày 23/3/2025, Ukraine đã quyết định dốc toàn lực tấn công vào tỉnh Belgorod, thể hiện qua việc triển khai các phương tiện chiến đấu hiện đại. Hành động này cho thấy sự chuẩn bị kỹ lưỡng và quyết tâm của Kiev trong việc giành lại quyền kiểm soát khu vực. Trong khi đó, tình hình tại Kursk trở nên phức tạp khi quân đội Ukraine có thể sẽ rút lui khỏi một số làng do thất bại trong các chiến dịch tấn công.",
-    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-tat-tay-doc-toan-luc-tan-cong-belgorod-20250323062656449.htm",
-    "cat": "the-gioi",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Tại sao Ukraine quyết định tấn công Belgorod vào ngày 23/3/2025?",
-    "answers": [
-      {
-        "text": "Để dốc toàn lực và giành lại quyền kiểm soát khu vực.",
-        "correct": true
-      },
-      {
-        "text": "Để phản công quân đội Nga tại Kursk.",
-        "correct": false
-      },
-      {
-        "text": "Để củng cố vị trí của NATO trong khu vực.",
-        "correct": false
-      },
-      {
-        "text": "Để tổ chức các cuộc diễn tập quân sự lớn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chiến sự Ukraine 23/3: Kiev thất bại nặng nề ở Kursk, rút lui hỗn loạn",
     "content": "Trong cuộc chiến tại Kursk, Ukraine đã gặp thất bại nặng nề, buộc họ phải rút lui hỗn loạn khỏi các làng Oleshnya và Gogolevka. Các nguồn tin cho biết chiến lược của NATO đã không thể giúp Ukraine vượt qua quân đội Nga, dẫn đến tình trạng bất ổn và thiệt hại lớn cho Kiev. Những phân tích từ các chuyên gia quốc tế đều đồng tình rằng đây là một thất bại nghiêm trọng về mặt vật chất đối với Ukraine.",
     "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-that-bai-nang-ne-o-kursk-rut-lui-hon-loan-20250323062656449.htm",
@@ -2711,6 +2715,33 @@
       },
       {
         "text": "Do địa hình khó khăn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chiến sự Ukraine 23/3: Kiev \"tất tay\", dốc toàn lực tấn công Belgorod",
+    "content": "Vào ngày 23/3/2025, Ukraine đã quyết định dốc toàn lực tấn công vào tỉnh Belgorod, thể hiện qua việc triển khai các phương tiện chiến đấu hiện đại. Hành động này cho thấy sự chuẩn bị kỹ lưỡng và quyết tâm của Kiev trong việc giành lại quyền kiểm soát khu vực. Trong khi đó, tình hình tại Kursk trở nên phức tạp khi quân đội Ukraine có thể sẽ rút lui khỏi một số làng do thất bại trong các chiến dịch tấn công.",
+    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-tat-tay-doc-toan-luc-tan-cong-belgorod-20250323062656449.htm",
+    "cat": "the-gioi",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tại sao Ukraine quyết định tấn công Belgorod vào ngày 23/3/2025?",
+    "answers": [
+      {
+        "text": "Để dốc toàn lực và giành lại quyền kiểm soát khu vực.",
+        "correct": true
+      },
+      {
+        "text": "Để phản công quân đội Nga tại Kursk.",
+        "correct": false
+      },
+      {
+        "text": "Để củng cố vị trí của NATO trong khu vực.",
+        "correct": false
+      },
+      {
+        "text": "Để tổ chức các cuộc diễn tập quân sự lớn.",
         "correct": false
       }
     ]
@@ -2805,33 +2836,6 @@
     ]
   },
   {
-    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
-    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
-    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
-    "answers": [
-      {
-        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
-        "correct": true
-      },
-      {
-        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
-        "correct": false
-      },
-      {
-        "text": "Cô không có ước mơ trở thành ca sĩ.",
-        "correct": false
-      },
-      {
-        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Diện mạo Bãi Sau Vũng Tàu sau gần 5 tháng chỉnh trang",
     "content": "Sau gần 5 tháng chỉnh trang với kinh phí khoảng 1.100 tỷ đồng, dự án chỉnh trang biển Bãi Sau Vũng Tàu đang dần hoàn thiện. Một số hạng mục, bao gồm công viên và đường đi bộ, sẽ được đưa vào sử dụng vào dịp lễ 30/4. Dự án đã hoàn thành khoảng 60% khối lượng công việc, tuy nhiên, một số đoạn còn lại bị chậm tiến độ do các vấn đề liên quan đến bàn giao mặt bằng.",
     "link": "https://vnexpress.net/dien-mao-bai-sau-vung-tau-sau-gan-5-thang-chinh-trang-4864622.html",
@@ -2858,6 +2862,33 @@
       },
       {
         "text": "90%",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
+    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
+    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
+    "answers": [
+      {
+        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
+        "correct": true
+      },
+      {
+        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
+        "correct": false
+      },
+      {
+        "text": "Cô không có ước mơ trở thành ca sĩ.",
+        "correct": false
+      },
+      {
+        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
         "correct": false
       }
     ]
@@ -3577,33 +3608,6 @@
       },
       {
         "text": "Tại quán cà phê gần sân bay",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ngày hội 'độ' xe VF 3 tổ chức tại ba miền",
-    "content": "Ngày hội 'độ' xe VF 3 diễn ra vào ngày 22/3/2025 tại Hà Nội, Đà Nẵng và TP HCM thu hút hàng trăm chiếc xe VinFast VF 3 với nhiều phong cách khác nhau. Sự kiện không chỉ có cuộc thi 'Sáng tạo chất riêng, độc bản cá tính' mà còn có các hoạt động bên lề như talkshow và lái thử xe. Ban tổ chức sẽ trao giải cho những mẫu xe xuất sắc với tổng giá trị giải thưởng lên đến 500 triệu đồng.",
-    "link": "https://vnexpress.net/ngay-hoi-do-xe-vf-3-to-chuc-tai-ba-mien-4864582.html",
-    "cat": "oto-xe-may",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ngày hội 'độ' xe VF 3 diễn ra khi nào và ở đâu?",
-    "answers": [
-      {
-        "text": "Ngày 22/3/2025 tại Hà Nội, Đà Nẵng và TP HCM",
-        "correct": true
-      },
-      {
-        "text": "Ngày 22/3/2023 tại Hà Nội và TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Ngày 22/4/2025 tại Đà Nẵng và TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Ngày 23/3/2025 tại Hà Nội, Đà Nẵng và TP HCM",
         "correct": false
       }
     ]
