--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Tổng công ty Hàng Hải Việt Nam lãi đột biến, hé lộ thu nhập dàn lãnh đạo",
+    "content": "Tổng công ty Hàng Hải Việt Nam (VIMC) vừa công bố báo cáo tài chính năm 2024 với lãi sau thuế đạt 2.629 tỉ đồng, tăng 55% so với năm trước. Doanh thu hợp nhất của công ty đạt 16.961 tỉ đồng, chủ yếu nhờ vào khoản \"lợi nhuận khác\". Thu nhập của các lãnh đạo cũng tăng mạnh, với tổng chi trả lên tới 13,65 tỉ đồng, trong đó ông Lê Anh Sơn, chủ tịch HĐQT nhận gần 1,64 tỉ đồng, tương đương 136 triệu đồng/tháng.",
+    "link": "https://tuoitre.vn/tong-cong-ty-hang-hai-viet-nam-lai-dot-bien-he-lo-thu-nhap-dan-lanh-dao-20250323175053181.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "VIMC đạt được lãi sau thuế bao nhiêu trong năm 2024?",
+    "answers": [
+      {
+        "text": "2.629 tỉ đồng",
+        "correct": true
+      },
+      {
+        "text": "1.640 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "1.353 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "16.961 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "13,65 tỉ đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Trung Quốc thắng Hàn Quốc ở giải giao hữu U22",
     "content": "Trong trận đấu giao hữu U22 diễn ra vào chiều 23/3/2025, đội chủ nhà Trung Quốc đã giành chiến thắng 1-0 trước Hàn Quốc. Bàn thắng được ghi bởi Liu Haofan ở phút 86, giúp Trung Quốc vươn lên dẫn đầu bảng với bốn điểm. Trong khi đó, Hàn Quốc chưa có điểm nào và đứng cuối bảng sau hai lượt trận.",
     "link": "https://vnexpress.net/trung-quoc-thang-han-quoc-o-giai-giao-huu-u22-4864872.html",
@@ -1118,33 +1149,6 @@
     ]
   },
   {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
-    "answers": [
-      {
-        "text": "Bơ, táo, lê, lựu, cam",
-        "correct": true
-      },
-      {
-        "text": "Chuối, dưa hấu, nho",
-        "correct": false
-      },
-      {
-        "text": "Xoài, dứa, kiwi",
-        "correct": false
-      },
-      {
-        "text": "Nho khô, hạt chia, bưởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác bảo vệ gây sốt vì khéo dỗ bé gái chờ mẹ đến đón muộn",
     "content": "Bác bảo vệ Liu Jie, làm việc tại một trường mẫu giáo ở Sơn Đông, Trung Quốc, đã thu hút sự chú ý trên mạng xã hội khi ân cần dỗ dành bé gái Tiểu Đào đang chờ mẹ đến đón muộn. Khi thấy Tiểu Đào buồn bã, bác Liu đã bế bé và thực hiện một điệu nhảy vui vẻ để làm cô bé vui trở lại. Hành động này không chỉ giúp Tiểu Đào cảm thấy hạnh phúc mà còn thể hiện sự quan tâm và tình yêu thương của bác bảo vệ đối với trẻ nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/bac-bao-ve-gay-sot-vi-kheo-do-be-gai-cho-me-den-don-muon-20250319110703515.htm",
@@ -1198,6 +1202,33 @@
       },
       {
         "text": "Bông cải xanh, bắp cải, đậu xanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
+    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
+    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại quả nào giúp giảm cholesterol?",
+    "answers": [
+      {
+        "text": "Bơ, táo, lê, lựu, cam",
+        "correct": true
+      },
+      {
+        "text": "Chuối, dưa hấu, nho",
+        "correct": false
+      },
+      {
+        "text": "Xoài, dứa, kiwi",
+        "correct": false
+      },
+      {
+        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
@@ -1369,28 +1400,59 @@
     ]
   },
   {
-    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
-    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
-    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
+    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
+    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
+    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
     "answers": [
       {
-        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
+        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
         "correct": true
       },
       {
-        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
+        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
         "correct": false
       },
       {
-        "text": "Uống nhiều đồ uống có gas.",
+        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
         "correct": false
       },
       {
-        "text": "Không cần súc miệng sau khi ăn.",
+        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hệ lụy 'tình một đêm'",
+    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
+    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
+    "answers": [
+      {
+        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây hại về mặt tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Giúp cải thiện sức khỏe tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức khỏe sinh lý.",
         "correct": false
       }
     ]
@@ -1450,59 +1512,28 @@
     ]
   },
   {
-    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
-    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
-    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
+    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
+    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
+    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
     "answers": [
       {
-        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
+        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
         "correct": true
       },
       {
-        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
+        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
+        "text": "Uống nhiều đồ uống có gas.",
         "correct": false
       },
       {
-        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hệ lụy 'tình một đêm'",
-    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
-    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
-    "answers": [
-      {
-        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây hại về mặt tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Giúp cải thiện sức khỏe tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức khỏe sinh lý.",
+        "text": "Không cần súc miệng sau khi ăn.",
         "correct": false
       }
     ]
