Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,33 @@
     ]
   },
   {
+    "title": "Vì sao bạn thèm đồ ngọt sau bữa ăn",
+    "content": "Sau bữa ăn, nhiều người thường cảm thấy thèm đồ ngọt, hiện tượng này được giải thích bởi khoa học là do não kích thích cơn thèm ăn thông qua các tế bào thần kinh POMC. Nghiên cứu cho thấy, khi đã ăn no, não vẫn có thể tạo ra cảm giác thèm đồ ngọt nhờ vào việc giải phóng beta-endorphin, một chất hóa học gây khoái cảm. Để thỏa mãn cơn thèm ăn, có thể lựa chọn các món ngọt lành mạnh như chocolate hay trái cây, và nhai kẹo cao su không đường cũng là một cách hữu ích để kiểm soát cơn thèm ăn.",
+    "link": "https://vnexpress.net/vi-sao-ban-them-do-ngot-sau-bua-an-4864799.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao chúng ta thường thèm đồ ngọt sau bữa ăn?",
+    "answers": [
+      {
+        "text": "Vì não kích thích cơn thèm ăn đồ ngọt khi đã no.",
+        "correct": true
+      },
+      {
+        "text": "Do ăn uống không đủ dinh dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Vì đồ ngọt có vị ngon hơn các món khác.",
+        "correct": false
+      },
+      {
+        "text": "Do thói quen ăn uống không lành mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "McLaren áp đảo tại Grand Prix Trung Quốc",
     "content": "Tại Grand Prix Trung Quốc diễn ra vào chiều 23/3, đội đua McLaren đã có một màn trình diễn ấn tượng khi Oscar Piastri và Lando Norris lần lượt về nhất và nhì. Piastri, lần đầu xuất phát từ vị trí số 1, đã dẫn đầu và duy trì khoảng cách an toàn với đồng đội trong suốt cuộc đua. Đây là chiến thắng thứ hai liên tiếp của McLaren, củng cố vị thế của họ trong mùa giải F1 năm nay.",
     "link": "https://vnexpress.net/mclaren-ap-dao-tai-grand-prix-trung-quoc-4864874.html",
@@ -1843,28 +1870,28 @@
     ]
   },
   {
-    "title": "Nhịp tim chậm thế nào là bất thường?",
-    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
-    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
+    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
+    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
     "cat": "suc-khoe",
-    "positivity": 5,
+    "positivity": 8,
     "importance": 7,
-    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
     "answers": [
       {
-        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
         "correct": true
       },
       {
-        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "text": "Uống nhiều đồ uống có gas.",
         "correct": false
       },
       {
-        "text": "Chỉ cần theo dõi mà không cần điều trị.",
+        "text": "Không cần súc miệng sau khi ăn.",
         "correct": false
       }
     ]
@@ -1892,6 +1919,33 @@
       },
       {
         "text": "Có, nhưng chỉ ăn thịt gà chiên.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhịp tim chậm thế nào là bất thường?",
+    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
+    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "answers": [
+      {
+        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần theo dõi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -1950,33 +2004,6 @@
       },
       {
         "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
-    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
-    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
-    "answers": [
-      {
-        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Uống nhiều đồ uống có gas.",
-        "correct": false
-      },
-      {
-        "text": "Không cần súc miệng sau khi ăn.",
         "correct": false
       }
     ]
@@ -2585,6 +2612,68 @@
     ]
   },
   {
+    "title": "Tranh cãi gay gắt những khóa học dạy làm cha mẹ tốt",
+    "content": "Tại Trung Quốc, các khóa học dạy làm cha mẹ đang gây tranh cãi với những khẩu hiệu như \"Cha mẹ sửa mình, không phải sửa con\". Những khóa học này thu hút nhiều phụ huynh đang gặp khó khăn trong việc nuôi dạy con cái. Tuy nhiên, hiệu quả của các khóa học này vẫn là đề tài gây tranh cãi, khi nhiều phụ huynh vẫn chưa thấy được cải thiện trong mối quan hệ với con hoặc tình trạng của con cái. Thêm vào đó, công ty cung cấp khóa học cũng đã bị phạt vì vi phạm quảng cáo.",
+    "link": "https://dantri.com.vn/giao-duc/tranh-cai-gay-gat-nhung-khoa-hoc-day-lam-cha-me-tot-20250322150409471.htm",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Những khóa học dạy làm cha mẹ tại Trung Quốc gây ra tranh cãi gì?",
+    "answers": [
+      {
+        "text": "Hiệu quả chưa rõ ràng và có những phản ứng tiêu cực từ phụ huynh",
+        "correct": true
+      },
+      {
+        "text": "Chúng giúp phụ huynh giao tiếp tốt hơn với con cái",
+        "correct": false
+      },
+      {
+        "text": "Chúng gây ra sự đồng thuận giữa các bậc phụ huynh",
+        "correct": false
+      },
+      {
+        "text": "Chúng là một phương pháp nuôi dạy trẻ truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Chúng hoàn toàn không được ủng hộ bởi xã hội",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nguyên nhân khiến trẻ nôn trớ",
+    "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
+    "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao trẻ sơ sinh lại bị nôn trớ?",
+    "answers": [
+      {
+        "text": "Do hệ tiêu hóa chưa hoàn thiện",
+        "correct": true
+      },
+      {
+        "text": "Do trẻ ăn quá nhiều",
+        "correct": false
+      },
+      {
+        "text": "Do trẻ không được bú sữa",
+        "correct": false
+      },
+      {
+        "text": "Do trẻ bị sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Do trẻ không ăn uống đầy đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lợi ích khi ăn các loại hạt buổi sáng",
     "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
     "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
@@ -2638,68 +2727,6 @@
       },
       {
         "text": "Phẫu thuật truyền thống",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nguyên nhân khiến trẻ nôn trớ",
-    "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
-    "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao trẻ sơ sinh lại bị nôn trớ?",
-    "answers": [
-      {
-        "text": "Do hệ tiêu hóa chưa hoàn thiện",
-        "correct": true
-      },
-      {
-        "text": "Do trẻ ăn quá nhiều",
-        "correct": false
-      },
-      {
-        "text": "Do trẻ không được bú sữa",
-        "correct": false
-      },
-      {
-        "text": "Do trẻ bị sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Do trẻ không ăn uống đầy đủ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tranh cãi gay gắt những khóa học dạy làm cha mẹ tốt",
-    "content": "Tại Trung Quốc, các khóa học dạy làm cha mẹ đang gây tranh cãi với những khẩu hiệu như \"Cha mẹ sửa mình, không phải sửa con\". Những khóa học này thu hút nhiều phụ huynh đang gặp khó khăn trong việc nuôi dạy con cái. Tuy nhiên, hiệu quả của các khóa học này vẫn là đề tài gây tranh cãi, khi nhiều phụ huynh vẫn chưa thấy được cải thiện trong mối quan hệ với con hoặc tình trạng của con cái. Thêm vào đó, công ty cung cấp khóa học cũng đã bị phạt vì vi phạm quảng cáo.",
-    "link": "https://dantri.com.vn/giao-duc/tranh-cai-gay-gat-nhung-khoa-hoc-day-lam-cha-me-tot-20250322150409471.htm",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Những khóa học dạy làm cha mẹ tại Trung Quốc gây ra tranh cãi gì?",
-    "answers": [
-      {
-        "text": "Hiệu quả chưa rõ ràng và có những phản ứng tiêu cực từ phụ huynh",
-        "correct": true
-      },
-      {
-        "text": "Chúng giúp phụ huynh giao tiếp tốt hơn với con cái",
-        "correct": false
-      },
-      {
-        "text": "Chúng gây ra sự đồng thuận giữa các bậc phụ huynh",
-        "correct": false
-      },
-      {
-        "text": "Chúng là một phương pháp nuôi dạy trẻ truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Chúng hoàn toàn không được ủng hộ bởi xã hội",
         "correct": false
       }
     ]
